...
<LinearLayout
    android:id="@+id/incid_see_by_comu_list_item"
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/incid_see_apertura_block"
        style="@style/baseLayout"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/incid_apertura_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_apertura_rot"
            android:layout_weight="0"
            android:gravity="start"/>
        <TextView
            android:id="@+id/incid_fecha_alta_view"
            style="@style/textBase.textFieldLabel2"
            android:layout_marginStart="@dimen/simple_horizontal_margin"
            android:layout_weight="0"
            android:gravity="start"/>
        <TextView
            android:id="@+id/incid_see_iniciador_view"
            style="@style/textBase.textFieldLabel2"
            android:layout_marginStart="@dimen/double_horizontal_margin"
            android:layout_weight="1"
            android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/incid_see_cierre_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/incid_cierre_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_cierre_rot"
            android:layout_weight="0"
            android:gravity="start"/>
        <TextView
            android:id="@+id/incid_fecha_cierre_view"
            style="@style/textBase.textFieldLabel2"
            android:layout_marginStart="@dimen/simple_horizontal_margin"
            android:layout_weight="1"
            android:gravity="start"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/incid_see_importancia_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/incid_importancia_comunidad_rot"
            style="@style/textBase.textFieldLabel1"
            android:text="@string/incid_importancia_comunidad_rot"
            android:layout_weight="0"
            android:gravity="start"/>
        <TextView
            android:id="@+id/incid_importancia_comunidad_view"
            style="@style/textBase.textFieldLabel2"
            android:layout_marginStart="@dimen/simple_horizontal_margin"
            android:layout_weight="1"
            android:gravity="start"/>
    </LinearLayout>

    <TextView
        android:id="@+id/incid_ambito_view"
        style="@style/textBase.textFieldLabel2"
        />
    <TextView
        android:id="@+id/incid_descripcion_view"
        style="@style/textBase.textFieldLabel2"
        />
    <LinearLayout
        android:id="@+id/incid_see_resolucion_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
