...
        android:orderInCategory="100"
        android:title="@string/incid_resolucion_ac_mn"
        android:visible="false"
        android:enabled="false"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/incid_comment_reg_ac_mn"
        android:orderInCategory="200"
        android:title="@string/incid_comment_reg_ac_mn"
        app:showAsAction="never|withText"/>
    <item
        android:id="@+id/incid_comments_see_ac_mn"
        android:orderInCategory="200"
        android:title="@string/incid_comments_see_ac_mn"
        app:showAsAction="never|withText"/>
</menu>

