...
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/incid_comments_see_fr_layout"
        style="@style/baseLayout.withPadding"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="@dimen/app_bar_bottom_margin">

        <ListView
            android:id="@id/android:list"
...
