...
        android:layout_marginTop="@dimen/vertical_margin">
        <Button
            android:id="@+id/incid_edit_fr_modif_button"
            style="@style/textBase.acButton1"
            android:text="@string/modif_button_rot"/>
        <Button
            android:id="@+id/incid_edit_fr_borrar_button"
            style="@style/textBase.acButton1"
            android:text="@string/borrar_button_rot"/>
    </LinearLayout>

    <include layout="@layout/incid_see_usercomu_importancia_merge"/>

...
