...
    <!--******************************************************************************-->
    <!--                                 INCIDENCIAS                                  -->
    <!--******************************************************************************-->
    <!-- ============================ MESSAGES ============================== -->
    <string name="no_incidencia_to_show">No hay incidencias que mostrar</string>
    <string name="incidencia_not_registered">Intenta nuevamente registrar la incidencia.</string>
    <string name="incidencia_wrong_init">Verifica que sigue abierta la incidencia.
    </string>
    <string name="resolucion_duplicada">Ya existe resolución para esta incidencia</string>
    <string name="user_without_powers">Haz login y accede nuevamente a la incidencia.</string>
    <!-- ====================== Google Cloud Messages ====================== -->
    <string name="incid_id_notification_channel">INCIDENCIAS</string>
    <string name="incid_desc_notification_channel">Dídekin: incidencias comunidad</string>
...
